fix nav on smaller screens, change about order on smaller screens

--- a/style.css
+++ b/style.css
@@ -1,168 +1,180 @@
 :root {
-    --color-light: #eff6ee;
-    --color-dark: #2b2d42;
-    --color-red: #f02d3a;
+	--color-light: #eff6ee;
+	--color-dark: #2b2d42;
+	--color-red: #f02d3a;
 }
 
 * {
-    margin: 0;
-    padding: 0;
-    font-size: 100%;
-    font-weight: 400;
-    box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	font-size: 100%;
+	font-weight: 400;
+	box-sizing: border-box;
 }
 
-body, html {
-    background-color: var(--color-light);
-    font-family: 'Roboto', sans-serif;
-    font-size: 18px;
+body,
+html {
+	background-color: var(--color-light);
+	font-family: 'Roboto', sans-serif;
+	font-size: 18px;
 }
 
 header {
-    background-color: var(--color-dark);
+	background-color: var(--color-dark);
 }
 
 nav {
-    max-width: 1200px;
-    margin: 0 auto;
-    color: var(--color-light);
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: baseline;
-    margin-bottom: 3rem;
-}
-
-.nav-links {
-    display: flex;
-    justify-content: flex-end;
-}
-
-.nav-link {
-    text-decoration: none;
-    color: var(--color-light);
-    font-weight: 500;
-    padding: .5rem;
-    margin: .6rem;
-}
-
-.nav-link:hover {
-    text-decoration: underline;
+	max-width: 1200px;
+	width: 100%;
+	margin: 0 auto;
+	color: var(--color-light);
+	display: flex;
+	justify-content: space-between;
+	margin-bottom: 3rem;
 }
 
 .nav-icon {
-    padding: .5rem;
-    margin: .6rem;
+	padding: .5rem;
+	margin: .6rem;
+	flex-grow: 1;
+	flex-shrink: 1;
+}
+
+.nav-links {
+	display: flex;
+	justify-content: flex-end;
+	flex-grow: 4;
+}
+
+.nav-link {
+	text-decoration: none;
+	color: var(--color-light);
+	padding: .5rem;
+	margin: .6rem;
+}
+
+.nav-link:hover {
+	text-decoration: underline;
 }
 
 .nav-icon a {
-    font-weight: 700;
-    color: var(--color-light);
-    text-decoration: none;
+	font-weight: 700;
+	color: var(--color-light);
+	text-decoration: none;
 }
 
 main {
-    width: 90%;
-    max-width: 1200px;
-    margin: 1rem auto;
-    font-weight: 300;
+	width: 90%;
+	max-width: 1200px;
+	margin: 1rem auto;
+	font-weight: 300;
 }
 
 .title {
-    text-align: center;
-    margin: 6rem 0;
+	text-align: center;
+	margin: 6rem 0;
 }
 
 .title-name {
-    font-weight: 700;
-    font-size: 2.5rem;
-    color: var(--color-dark);
+	font-weight: 700;
+	font-size: 2.5rem;
+	color: var(--color-dark);
 }
 
 .sub-title {
-    font-weight: 300;
-    font-size: 1.25rem;
-    color: var(--color-dark)
+	font-weight: 300;
+	font-size: 1.25rem;
+	color: var(--color-dark);
 }
 
 .section {
-    margin: 4rem 0;
+	margin: 4rem 0;
 }
 
 .section-title {
-    background-color: var(--color-red);
-    border-radius: 10px 10px 0 0;
-    color: var(--color-light);
-    font-weight: 400;
-    font-size: 1.5rem;
-    padding: .5rem;
-    padding-left: 2rem;
-    margin-bottom: 2rem;
-    text-transform: uppercase;
+	background-color: var(--color-red);
+	border-radius: 10px 10px 0 0;
+	color: var(--color-light);
+	font-weight: 400;
+	font-size: 1.5rem;
+	padding: .5rem;
+	padding-left: 2rem;
+	margin-bottom: 2rem;
+	text-transform: uppercase;
 }
 
 .section-text {
-    font-weight: 300;
-    color: var(--color-dark);
-    font-size: 1.2rem;
-    line-height: 150%;
-    padding: .5rem .2rem;
+	font-weight: 300;
+	color: var(--color-dark);
+	font-size: 1.2rem;
+	line-height: 150%;
+	padding: .5rem .2rem;
 }
 
 .about {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: flex-start;
+	display: flex;
+	justify-content: space-evenly;
+	align-items: flex-start;
 }
 
 .logos {
-    display: grid;
-    grid-template-columns: auto auto auto;
+	display: grid;
+	grid-template-columns: auto auto auto;
 }
 
 .logo {
-    max-width: 70px;
-    width: 100%;
-    transition: transform .15s linear;
-    justify-self: center;
-    align-self: center;
+	max-width: 70px;
+	width: 100%;
+	transition: transform .15s linear;
+	justify-self: center;
+	align-self: center;
 }
 
 .logo:hover {
-    transform: scale(1.1);
+	transform: scale(1.1);
 }
 
-.logos>div {
-    text-align: center;
-    margin: .4rem;
+.logos > div {
+	text-align: center;
+	margin: .4rem;
 }
 
 .logos p {
-    color: var(--color-dark);
-    font-weight: 300;
-    font-size: .7rem;
+	color: var(--color-dark);
+	font-weight: 300;
+	font-size: .7rem;
 }
 
 .logo-text {
-    opacity: 0;
+	opacity: 0;
 }
 
 .logo:hover + .logo-text {
-    opacity: 1;
-    transition: opacity .1s linear;
+	opacity: 1;
+	transition: opacity .1s linear;
 }
 
-.text{
-    width: 50%;
-    align-self: center;
+.text {
+	width: 50%;
+	align-self: center;
 }
 
 @media only screen and (max-width: 600px) {
-    .title-name {
-        font-size: 1.75rem;
-    }
-    
-    .sub-title {
-        font-size: 1rem;
-    }
+	.title-name {
+		font-size: 1.75rem;
+	}
+
+	.sub-title {
+		font-size: 1rem;
+	}
+
+	.about {
+		flex-direction: column;
+		align-items: center;
+	}
+
+	.text {
+		order: -1;
+		width: 100%;
+	}
 }
